Rendering rework